--- a/gamificacao/pom.xml
+++ b/gamificacao/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.facens</groupId>
 	<artifactId>gamificacao</artifactId>
@@ -69,5 +69,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
